--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Medical</a>
+                <a class="nav-link" href="./html/Medical.html">Medical</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -82,9 +82,15 @@
     </nav>
     <section class="container-fluid h-100 gx-0 p-5">
         <div class="row p-5">
-            <div class="col-lg-4 col-sm-12 p-sm-5 p-lg-3 d-sm-block"><img class="card-img" src="https://i.postimg.cc/k44Cd3FZ/image1.png" loading="lazy" alt="your certificates"></div>
-            <div class="col-lg-4 col-sm-12 p-sm-5 p-lg-3"><img class="card-img" src="https://i.postimg.cc/Lhd70r8r/image2.png" loading="lazy" alt="your certificates"></div>
-            <div class="col-lg-4 col-sm-12 p-sm-5 p-lg-3"><img class="card-img" src="https://i.postimg.cc/ZYcxsWwV/ppenew.png" loading="lazy" alt="your certificates"></div>
+            <div class="col-lg-4 col-sm-12 p-sm-5 p-lg-3 d-sm-block">
+                <img class="card-img" src="https://i.postimg.cc/k44Cd3FZ/image1.png" loading="lazy" alt="your certificates">
+            </div>
+            <div class="col-lg-4 col-sm-12 p-sm-5 p-lg-3">
+                <img class="card-img" src="https://i.postimg.cc/Lhd70r8r/image2.png" loading="lazy" alt="your certificates">
+            </div>
+            <div class="col-lg-4 col-sm-12 p-sm-5 p-lg-3">
+                <img class="card-img" src="https://i.postimg.cc/ZYcxsWwV/ppenew.png" loading="lazy" alt="your certificates">
+            </div>
         </div>
     </section>
 
